syntax = "proto3";

package user;
option go_package = "./proto";

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message CreateUserResponse {
  int32 code = 1;
  string message = 2;
}

message GetUserRequest {
  string email = 1;
}

message GetUserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
}